Add a crud flow template